--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ievavold/dayton"
+  },
+  "devDependencies": {
+    "sass": "^1.32.8"
   }
 }
