--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/ievavold/dayton"
   },
   "devDependencies": {
+    "parcel-bundler": "^1.12.5",
     "sass": "^1.32.8"
   }
 }
