--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.5",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "typescript": "^4.2.3"
   }
 }
